<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Carnet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo05">

                <TextView
                    android:id="@+id/holaUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/handlee"
                    android:text="@string/texto10"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nomUsuario_carnet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="50dp"
                    android:layout_marginLeft="-80dp"
                    android:fontFamily="@font/handlee"
                    android:text="@string/texto11"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/foto_usuario_carnet"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/usuario2" />

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto08"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:fontFamily="@font/handlee"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto09"
            android:textSize="18dp"
            android:fontFamily="@font/handlee"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/semestre_carnet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint07"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/gris2"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carrera_carnet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint08"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/gris2"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/grupo_carnet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint09"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/gris2"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numControl_carnet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint10"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/gris2"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_carnet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint03"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/gris2"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubirArchivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/boton11"
            android:onClick="showFileChooser"
            android:backgroundTint="@color/azul01"/>

        <Button
            android:id="@+id/btnPagina2carnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/boton12"
            android:fontFamily="@font/handlee"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/white"
            tools:ignore="MissingConstraints"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo05">

        </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>