<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@drawable/fondo04"
    tools:context=".RecuperarPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:scaleX=".6"
            android:scaleY=".55"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="-120dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto03"
            android:fontFamily="@font/handlee"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:hintTextColor="@color/gris"
            app:boxStrokeColor="@color/white"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/handlee"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRecuperarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/boton07"
            android:fontFamily="@font/handlee"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:backgroundTint="@color/azul01"/>

        <Button
            android:id="@+id/btnRegresarRecup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/boton08"
            android:fontFamily="@font/handlee"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:backgroundTint="@color/azul01"
            android:layout_marginLeft="100dp"/>

    </LinearLayout>

</ScrollView>