<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@drawable/success"
    tools:context=".Login">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleY=".6"
        android:scaleX=".65"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="-120dp"
        android:transitionName="logo_trans"/>

    <TextView
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/handlee"
        android:text="@string/texto01"
        android:textAlignment="center"
        android:textColor="@color/azul01"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint01"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:fontFamily="@font/handlee"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/progreso"
        android:layout_gravity="center"
 />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint02"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:fontFamily="@font/handlee"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/handlee"
        android:id="@+id/btnOlvidoPass"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton02"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:layout_gravity="end"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton01"
        android:textAllCaps="true"
        android:fontFamily="@font/handlee"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/azul01" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="Iniciar Sesion con"
        android:fontFamily="@font/handlee"
        android:drawableRight="@drawable/google"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="9dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"/>

    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/handlee"
        android:id="@+id/btnRegistrar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton03"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

  </LinearLayout>

  </ScrollView>